--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,18 +5,19 @@
   --font-family: "Roboto", sans-serf;
   --normal-font: 400;
   --bolder-font: 900;
-  --bg-color: #fcfcfc;
-  --primary-color: #4756df;
-  --secondary-color: #ff7235;
-  --primary-shadow: #8b8eaf;
-  --secondary-shadow: #a17a69;
+  --bg-color: #f8f3f3;
+  --bg-color-secondary : #fff;
+  --primary-color: #7181FF;
+  --secondary-color: #FF9B47;
+  --primary-shadow:#0D0D0D;
+  --secondary-shadow: #A6A6A6;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
   --transition: 0.3s;
   --negrita: bold;
 }
-/* Variables fin */
+
 
 html {
   scroll-behavior: smooth;
@@ -44,6 +45,7 @@ a:hover {
 
 body {
   font-family: var(--font-family);
+  background-color: var(--bg-color);
 }
 
 /*Barra de navegación*/
@@ -56,13 +58,13 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 3rem;
+  padding: 10px;
   background-color: var(--bg-color);
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 5px var(--secondary-shadow);
 }
 
 nav h1 {
-  color: var(--primary-color);
+  color: var(--secondary-color);
 }
 
 nav a {
@@ -93,31 +95,32 @@ nav ul li {
   display: none;
 }
 
+
+
 /*sección presentación*/
 
 .presentacion {
   display: flex;
+  flex-wrap:wrap;
   align-items: center;
   justify-content: center;
-  top:;
-  gap: 2.5rem;
-  max-width: 68.75rem;
-  margin: auto;
+  margin-bottom: 50px;
 }
 
 .presentacion img {
-  height: 500px;
-  width: 350px;
+  height: 80%;
+  width: 25%;
 }
 
 .hola {
   width: 25rem;
   padding: 0.625rem;
   border-radius: 6px;
-  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+  box-shadow: 4px 2px 15px 2px var(--primary-shadow);
+  background-color: var(--bg-color-secondary);
 }
 
-.hola h1 {
+.hola h3 {
   margin-bottom: var(--bottom-margin);
 }
 
@@ -128,9 +131,10 @@ nav ul li {
 
 /*seccion mas sobre mi*/
 
-.mas-sobre {
-  background-color: var(--bg-color);
-  padding: 1rem 6rem;
+.mas-sobre{
+  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+  padding: 10%;
+  margin:4px ;
 }
 
 .mas-sobre h2 {
@@ -140,35 +144,30 @@ nav ul li {
 
 .mas-sobre p {
   line-height: var(--line-height);
-  padding: 0.4rem;
+  padding: 0.3rem;
 }
 
 /*sección habilidades*/
 
-.habilidades {
-  max-width: 68.75rem;
-  margin: auto;
+.contenedor-habilidad {
   text-align: center;
-  margin-top: 2.5rem;
+  width: 100%;
+  height: 100%;
+  padding: 10%;
 }
 
-.encabezado-habilidad {
-  margin-bottom: 1rem;
+.contenedor-habilidad h2 {
+  margin: 10px;
 }
 
 .contenedor-habilidad img {
   padding: 1.25rem;
-  width: 11.875rem;
-  height: 11.25rem;
-}
-
-.icono {
-  width: 16px;
-  height: 16px;
+  width: 100px;
+  height: 100px;
 }
 
 .tarjeta-icono {
-  background-color: #fff;
+  background-color: var(--bg-color-secondary);
   border-radius: 11px;
   box-shadow: 0 3px 10px var(--secondary-shadow);
   padding: 20px;
@@ -225,6 +224,7 @@ nav ul li {
 
 .contacto {
   margin-top: 2rem;
+   
 }
 
 .contacto h2 {
@@ -241,8 +241,8 @@ nav ul li {
 }
 
 .formulario-contacto label {
-  line-height: 2.7em;
-  font-weight: var(--bold-font);
+  line-height: 2rem;
+  font-weight: var(--negrita);
   color: var(--primary-color);
 }
 
@@ -252,43 +252,48 @@ nav ul li {
 }
 
 .formulario-contacto .input-field {
-  width: 100%;
+  width: 95%;
   padding-top: 10px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   border-radius: 5px;
   border: none;
-  border: 2px outset  var(--primary-color);
+  box-shadow: 0 3px 10px var(--secondary-shadow);
   font-size: 0.875rem;
   outline: none;
 }
 
 .input-field::placeholder {
   padding: 0.5rem;
-  color: var(--primary-color);
+  color: var(--secundary-color);
 }
 
 .submit-btn {
-  width: 100%;
+  width: 95%;
   padding: 10px;
   margin: 10px 0;
   background-color: #fff;
-  border: 2px solid var(--primary-color);
-  border-radius: 5px;
-  font-size: 1rem;
-  font-weight: var(--bold-font);
+  font-weight: var(--negrita);
   transition: var(--transition);
-}
-
-.submit-btn:hover {
-  background-color: var(--primary-color);
-  border: 2px solid var(--primary-color);
+  border: 3px solid var(--primary-color);
+  border-radius: 4px;
   cursor: pointer;
 }
 
+input[type="submit"]{
+  color: var(--primary-color);
+  font-size: 1.5rem;
+}
+
+input[type="submit"]:hover {
+  color: var(--secondary-color);; /* Cambia 'blue' al color que desees */
+}
+
+
 /*Sección sociales*/
 footer {
-  margin-top: 20px;
+  margin-top: 10px;
 }
+
 .sociales {
   display: flex;
   align-items: center;
@@ -298,19 +303,11 @@ footer {
 }
 
 .socicon {
-  width: 4rem;
-  height: 4rem;
+  width: 2rem;
+  height: 2rem;
 }
 
-/*flecha arriba
-
-.desplazarse-hacia-arriba {
-  position: fixed;
-  right: 0.5%;
-  bottom: 3%;
-  cursor: pointer;
-}
-*/
+/*flecha arriba*/
 .flecha-arriba {
   width: 3rem;
   height: 3rem;
